force-app/main/default/objects/Contact/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to archive the contact record - it will not be deleted but can be filtered out of reports and views</inlineHelpText>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>