force-app/main/default/objects/Contact/fields/Booking_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Booking_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Booking/Partnership created when a Lead is converted in the current Contact.</description>
    <label>Booking/Partnership</label>
    <referenceTo>Group_Booking__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>