force-app/main/default/objects/Contact/fields/Brand_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Brand_Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to brand portal user when a contact is converted into a brand portal user community license</description>
    <label>Brand Portal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BPContacts</relationshipName>
    <type>Lookup</type>
</CustomField>