force-app/main/default/objects/Contact/fields/bt_stripe__Primary_Stripe_Customer__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Primary_Stripe_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Stripe Customer</label>
    <type>Checkbox</type>
</CustomField>