force-app/main/default/objects/Contact/fields/conference360__Last_Failed_Login__c.field-meta.xml
<CustomField>
    <fullName>conference360__Last_Failed_Login__c</fullName>
    <description>The last time an Events portal user tried to log into the portal unsuccessfully.</description>
    <inlineHelpText>The last time an Events portal user tried to log into the portal unsuccessfully.</inlineHelpText>
    <label>Last Failed Login</label>
    <type>DateTime</type>
</CustomField>