force-app/main/default/objects/Contact/fields/Contact_Interests__c.field-meta.xml
<CustomField>
    <fullName>Contact_Interests__c</fullName>
    <label>Contact Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Horse Events</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Motorsport</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Opera</fullName>
            </value>
            <value>
                <fullName>Film</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>