force-app/main/default/objects/Contact/fields/Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location__c</fullName>
    <description>Contact&apos;s location</description>
    <inlineHelpText>Contact&apos;s location</inlineHelpText>
    <label>Contact Location</label>
    <length>150</length>
    <type>Text</type>
</CustomField>