force-app/main/default/objects/Contact/fields/Contact_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Contact_Unique_Key__c</fullName>
    <description>This field is populated by a workflow rule which enters email+recordtype

The workflow is only configured for Tourism accounts</description>
    <label>The Email Address</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>