force-app/main/default/objects/Contact/fields/Job_role__c.field-meta.xml
<CustomField>
    <fullName>Job_role__c</fullName>
    <inlineHelpText>Populating this field improves the data segmentation for Marketing Campaigns</inlineHelpText>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>