force-app/main/default/objects/Contact/fields/Latest_Trade_Events_Attended__c.field-meta.xml
<CustomField>
    <fullName>Latest_Trade_Events_Attended__c</fullName>
    <label>Latest Trade Events Attended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>