force-app/main/default/objects/Contact/fields/Linked_In__c.field-meta.xml
<CustomField>
    <fullName>Linked_In__c</fullName>
    <description>Brand field</description>
    <inlineHelpText>Enter or Paste in the Link to the contacts Linked In profile if known</inlineHelpText>
    <label>Linked-In</label>
    <type>Url</type>
</CustomField>