force-app/main/default/objects/Contact/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Select the preferred location where the contact can usually attend a meeting</inlineHelpText>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>CUBA</fullName>
            </value>
            <value>
                <fullName>DENMARK</fullName>
            </value>
            <value>
                <fullName>FINLAND</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>GREECE</fullName>
            </value>
            <value>
                <fullName>HONG KONG</fullName>
            </value>
            <value>
                <fullName>HUNGARY</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>IRELAND</fullName>
            </value>
            <value>
                <fullName>ITALY</fullName>
            </value>
            <value>
                <fullName>NETHERLANDS</fullName>
            </value>
            <value>
                <fullName>NORWAY</fullName>
            </value>
            <value>
                <fullName>POLAND</fullName>
            </value>
            <value>
                <fullName>PORTUGAL</fullName>
            </value>
            <value>
                <fullName>RUSSIAN FEDERATION</fullName>
            </value>
            <value>
                <fullName>SAN MARINO</fullName>
            </value>
            <value>
                <fullName>SINGAPORE</fullName>
            </value>
            <value>
                <fullName>SPAIN</fullName>
            </value>
            <value>
                <fullName>SRI LANKA</fullName>
            </value>
            <value>
                <fullName>SWEDEN</fullName>
            </value>
            <value>
                <fullName>SWITZERLAND</fullName>
            </value>
            <value>
                <fullName>TAIWAN, PROVINCE OF CHINA</fullName>
            </value>
            <value>
                <fullName>THAILAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>