force-app/main/default/objects/Contact/fields/MICE_Contact__c.field-meta.xml
<CustomField>
    <fullName>MICE_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped from the Lead Object</description>
    <label>MICE Contact</label>
    <type>Checkbox</type>
</CustomField>