force-app/main/default/objects/Contact/fields/Mobile_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Opt Out</label>
    <type>Checkbox</type>
</CustomField>