force-app/main/default/objects/Contact/fields/Old_Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Instance_Id__c</fullName>
    <externalId>true</externalId>
    <label>Old Instance Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>