force-app/main/default/objects/Contact/fields/Opt_Out_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Campaign_Date__c</fullName>
    <description>If the Response from the Campaign was one that deems the contact to be opted out of future campaigns, this field captures the date of the opt out</description>
    <inlineHelpText>This is the date that the Contact opted out from email marketing</inlineHelpText>
    <label>Opt Out Campaign Date</label>
    <type>DateTime</type>
</CustomField>