force-app/main/default/objects/Contact/fields/Opt_Out_Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Campaign_Member_ID__c</fullName>
    <description>If the Response from the Campaign was one that deems the contact to be opted out of future campaigns, this field captures the campaign member record that caused the response</description>
    <inlineHelpText>This is the record ID of the campaign member from which the Contact opted out from email marketing</inlineHelpText>
    <label>Opt Out Campaign Member ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>