force-app/main/default/objects/Contact/fields/Opt_out_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Campaign_Status__c</fullName>
    <description>If the Response from the Campaign was one that deems the contact to be opted out of future campaigns, this field captures status the campaign member record was set to</description>
    <inlineHelpText>This is the reason reported for why the Contact opted out from email marketing</inlineHelpText>
    <label>Opt out Campaign Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>