force-app/main/default/objects/Contact/fields/Opt_Out_Campaign_String__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Campaign_String__c</fullName>
    <description>If the Response from the Campaign was one that deems the contact to be opted out of future campaigns, this field captures the campaign that provoked the response</description>
    <inlineHelpText>This is the Campaign ID from which the Contact opted out from email marketing</inlineHelpText>
    <label>Opt Out Campaign String</label>
    <length>80</length>
    <type>Text</type>
</CustomField>