force-app/main/default/objects/Contact/fields/Original_Village_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Original_Village_Of_Interest__c</fullName>
    <description>(hidden) This field is populated via a workflow rule to determine the Contact&apos;s original village of interest. This field should not ever be changed</description>
    <label>Original Village Of Interest</label>
    <length>55</length>
    <type>Text</type>
</CustomField>