force-app/main/default/objects/Contact/fields/Other_Villages_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Other_Villages_of_Interest__c</fullName>
    <inlineHelpText>Include the Primary Village (for mailshot logic)</inlineHelpText>
    <label>Other Villages of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bicester</fullName>
            </value>
            <value>
                <fullName>Fidenza</fullName>
            </value>
            <value>
                <fullName>Ingolstadt</fullName>
            </value>
            <value>
                <fullName>Kildare</fullName>
            </value>
            <value>
                <fullName>La Roca</fullName>
            </value>
            <value>
                <fullName>Las Rozas</fullName>
            </value>
            <value>
                <fullName>La Vallee</fullName>
            </value>
            <value>
                <fullName>Maasmechelen</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Suzhou</fullName>
            </value>
            <value>
                <fullName>Wertheim</fullName>
            </value>
            <value>
                <fullName>All Villages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>