force-app/main/default/objects/Contact/fields/Postcode_Region__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Region__c</fullName>
    <formula>LEFT( Responsys_Postcode__c  ,2)</formula>
    <label>Postcode Region</label>
    <type>Text</type>
</CustomField>