force-app/main/default/objects/Contact/fields/Preferred_Business_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Business_Language__c</fullName>
    <description>(For Brand Contacts) This is a separate field than the Tourism Language Preference.</description>
    <label>Preferred Business Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
                <default>true</default>
                <label>Not Specified</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Catalan</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>