force-app/main/default/objects/Contact/fields/Primary_Department__c.field-meta.xml
<CustomField>
    <fullName>Primary_Department__c</fullName>
    <inlineHelpText>Select the primary VR department responsible for the relationship with this Brand Contact</inlineHelpText>
    <label>Primary Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Remerch</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>RDT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>