force-app/main/default/objects/Contact/fields/Primary_Department_Level__c.field-meta.xml
<CustomField>
    <fullName>Primary_Department_Level__c</fullName>
    <inlineHelpText>Select the primary department level responsible for the relationship with this Brand Contact</inlineHelpText>
    <label>Primary Department Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>FV</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>KV</fullName>
            </value>
            <value>
                <fullName>LR</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>LZ</fullName>
            </value>
            <value>
                <fullName>MV</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>SZ</fullName>
            </value>
            <value>
                <fullName>WV</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>UK and Ireland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>