force-app/main/default/objects/Contact/fields/Primary_Investor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Investor_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Investor Contact</label>
    <type>Checkbox</type>
</CustomField>