force-app/main/default/objects/Contact/fields/Primary_Relationship_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relationship_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the Contact is the one that should recieve account emails</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>