force-app/main/default/objects/Contact/fields/Primary_Village_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_Village_of_Interest__c</fullName>
    <label>Primary Village of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bicester</fullName>
            </value>
            <value>
                <fullName>Fidenza</fullName>
            </value>
            <value>
                <fullName>Ingolstadt</fullName>
            </value>
            <value>
                <fullName>Kildare</fullName>
            </value>
            <value>
                <fullName>La Roca</fullName>
            </value>
            <value>
                <fullName>Las Rozas</fullName>
            </value>
            <value>
                <fullName>Maasmechelen</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Suzhou</fullName>
            </value>
            <value>
                <fullName>Wertheim</fullName>
            </value>
            <value>
                <fullName>La Vallée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>