force-app/main/default/objects/Contact/fields/Privacy_Policy_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the Contact tick the Privacy Policy Box on the MICE Lead form (this is carried through upon conversion)</description>
    <label>Privacy Policy Confirmed</label>
    <type>Checkbox</type>
</CustomField>