force-app/main/default/objects/Contact/fields/PRX__Profile_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>PRX__Profile_Image_URL__c</fullName>
    <description>The URL for Contact profile image</description>
    <label>Profile Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>