force-app/main/default/objects/Contact/fields/PRX__Total_Time__c.field-meta.xml
<CustomField>
    <fullName>PRX__Total_Time__c</fullName>
    <description>Total time in range and recognized by Proximity Insight</description>
    <label>Total Time</label>
    <summarizedField>PRX__Visit__c.PRX__Duration_Seconds__c</summarizedField>
    <summaryForeignKey>PRX__Visit__c.PRX__Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>