force-app/main/default/objects/Contact/fields/PRX__Total_Time_Formatted__c.field-meta.xml
<CustomField>
    <fullName>PRX__Total_Time_Formatted__c</fullName>
    <formula>IF((PRX__Total_Time__c / (3600 * 24)) &gt; 1,
  TEXT(FLOOR(PRX__Total_Time__c / (3600 * 24))) &amp; &apos;d &apos;,
  &apos;&apos;)

&amp;

IF((PRX__Total_Time__c / 3600) &gt; 1,
  TEXT(MOD(FLOOR(PRX__Total_Time__c / 3600), 24)) &amp; &apos;h &apos;,
  &apos;&apos;)

&amp;

IF((PRX__Total_Time__c / 60) &gt; 1,
  TEXT(MOD(FLOOR(PRX__Total_Time__c / 60), 60)) &amp; &apos;m&apos;,
  &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <type>Text</type>
</CustomField>