force-app/main/default/objects/Contact/fields/PRX__Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>PRX__Total_Visits__c</fullName>
    <description>Total visits in range and recognized by Proximity Insight</description>
    <label>Total Visits</label>
    <summaryForeignKey>PRX__Visit__c.PRX__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>