force-app/main/default/objects/Contact/fields/PRX__User_ID__c.field-meta.xml
<CustomField>
    <fullName>PRX__User_ID__c</fullName>
    <externalId>true</externalId>
    <label>User ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>